# lintr

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .windsurfrules  README.md  pyproject.toml  rules_reference.md  scratchpad.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-rc.yml  publish.yml
docs/: _index.md  contributing.md  coverage.md  customization.md  project_plan.md
docs/PyGithub/: Repository.py  Rule.py  Ruleset.py
docs/internal/: documentation_concept.md  phase_1.md  phase_2.md  phase_4.md  repository_structure.md  technical_constraints.md
docs/internal/lessons/: development_environment.md  github_api_integration.md  rules.md  testing.md
docs/rules/: _index.md  auto-merge-disabled.md  branch-ruleset.md  default-branch-exists.md  delete-branch-on-merg.md  develop-branch-ruleset.md  discussions-disabled.md  git-flow-branch-naming.md  git-flow-default-branch.md  git-flow-develop-branch-ruleset.md  git-flow-main-branch-ruleset.md  issues-disabled.md  main-branch-ruleset.md  merge-commits-allowed.md  no-classic-branch-protection.md  no-collaborators.md  preserve-repository-disabled.md  preserve-repository.md  projects-disabled.md  projects-enabled.md  rebase-merge-disabled.md  rebase-merge-enabled.md  single-own.md  squash-merge-disabled.md  squash-merge-enabled.md  web-commit-signoff-required-disabled.md  web-commit-signoff-required-enabled.md  web-commit-signoff-required.md  wikis-disabled.md
docs/rulesets/: _index.md
scripts/: generate_rule_docs.py
scripts/docs/rules/: auto-merge-disabled.md  auto-merge-enabled.md  delete-branch-on-merge-disabled.md  delete-branch-on-merge-enabled.md  discussions-disabled.md  discussions-enabled.md  git-flow-branch-naming.md  issues-disabled.md  issues-enabled.md  merge-commits-disabled.md  merge-commits-enabled.md  preserve-repository-enabled.md  projects-disabled.md  rebase-merge-disabled.md  web-commit-signoff-required-disabled.md  web-commit-signoff-required-enabled.md  wikis-disabled.md  wikis-enabled.md
src/lintr/: cli.py  config.py  linter.py  rule_manager.py
src/lintr/rules/: base.py  branch_rules.py  default_ruleset.py  general.py  gitflow.py  permission_rules.py
src/repolint/: __init__.py  __main__.py  cli.py  config.py  gh.py  github.py  linter.py  rule_manager.py  rules.py
src/repolint/rules/: __init__.py  base.py  branch_rules.py  context.py  default_rule_set.py  empty_rule_set.py  factories.py  general.py  gitflow.py  permission_rules.py
src/repolint/templates/: default_config.yml
support/docs/internal/: high_level_architecture.md  phase_3.md  project_plan.md
support/docs/internal/lessons/: coding.md  configuration.md  project_setup.md  rules.md
tests/: __init__.py  conftest.py  fixtures.py  test_cli.py  test_cli_fixes.py  test_config.py  test_custom_rules.py  test_github.py  test_linter.py  test_main.py  test_rule_manager.py  test_rules.py
tests/rules/: test_branch_rules.py  test_default_rule_set.py  test_default_ruleset.py  test_empty_rule_set.py  test_factories.py  test_general.py  test_gitflow.py  test_permission_rules.py
