[project]
name = "repolint"
version = "0.1.0"
description = "A Python-based command-line application to lint and enforce consistent settings across GitHub repositories"
authors = [
    { name = "Jens Keiner", email = "jens.keiner@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "PyGithub>=2.1.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/repolint"]

[tool.pytest.ini_options]
addopts = "--cov=repolint --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[project.scripts]
repolint = "repolint.cli:main"

[project.entry-points."repolint.rules"]
default_branch_exists = "repolint.rules.branch_rules:DefaultBranchExistsRule"

[project.entry-points."repolint.rule_sets"]
default = "repolint.rules.default_rule_set:get_default_rule_set"
