[project]
name = "repolint"
version = "0.1.0"
description = "A Python-based command-line application to lint and enforce consistent settings across GitHub repositories"
authors = [
    { name = "Jens Keiner", email = "jens.keiner@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "PyGithub>=2.5.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "colorama>=0.4.6",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src/repolint"]

[tool.hatch.build.targets.wheel]
packages = ["src/repolint"]

[tool.hatch.build.targets.editable]
path = "src"
install-deps = true

[tool.pytest.ini_options]
addopts = "--cov=repolint --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[project.scripts]
repolint = "repolint.cli:main"

[project.entry-points."repolint.rules"]
default_branch_exists = "repolint.rules.branch_rules:DefaultBranchExistsRule"
web_commit_signoff_required = "repolint.rules.branch_rules:WebCommitSignoffRequiredRule"
single_owner = "repolint.rules.permission_rules:SingleOwnerRule"
no_collaborators = "repolint.rules.permission_rules:NoCollaboratorsRule"
wikis_disabled = "repolint.rules.permission_rules:WikisDisabledRule"
issues_disabled = "repolint.rules.permission_rules:IssuesDisabledRule"
preserve_repository = "repolint.rules.general:PreserveRepositoryRule"
discussions_disabled = "repolint.rules.general:DiscussionsDisabledRule"
projects_disabled = "repolint.rules.general:ProjectsDisabledRule"
merge_commits_allowed = "repolint.rules.permission_rules:MergeCommitsAllowedRule"
squash_merge_disabled = "repolint.rules.permission_rules:SquashMergeDisabledRule"
rebase_merge_disabled = "repolint.rules.permission_rules:RebaseMergeDisabledRule"
delete_branch_on_merge = "repolint.rules.branch_rules:DeleteBranchOnMergeRule"
auto_merge_disabled = "repolint.rules.branch_rules:AutoMergeDisabledRule"
gitflow_branch_naming = "repolint.rules.gitflow:GitFlowBranchNamingRule"
gitflow_default_branch = "repolint.rules.gitflow:GitFlowDefaultBranchRule"

[project.entry-points."repolint.rule_sets"]
default = "repolint.rules.default_rule_set:get_default_rule_set"
